--- a/paper/sections/related-works.tex
+++ b/paper/sections/related-works.tex
@@ -1,16 +1,21 @@
 % !TEX root = ../main.tex
 
-\section{Related Works}
+\section{Related Work}
 \label{sec:related-works}
-Several prior authors have surveyed and systematized different aspects of the Blockchain landscape.
-One of the most comprehensive works is from Bonneau et al., focusing on Bitcoin and other cryptocurrencies~\cite{BMC+15}. The authors seek to understand how Bitcoin has worked successfully and securely in practice for several years despite the lack of a rigorous model for its correctness and security. %From a host of disparate sources, they distill a clear technical overview of how Bitcoin works. They then systematize the properties sufficient for system stability and analyze how they hold up under different assumptions about the incentives for miners. Finally, they evaluate and compare proposed changes to Bitcoin including tweaks to system parameters, alternative consensus protocols, and improvements to privacy and anonymity and conclude with a discussion of additional functionalities that Bitcoin could be extended to provide.  
-Their approach differs from ours in several key ways, reflecting that our analyses have fundamentally different goals. They focus on a single application of Blockchain technology and survey technical sources in order to analyze how those systems work and how design changes might affect functionality. By instead surveying sources that analyze Blockchain, we systematize the collective knowledge of the community to understand how Blockchain is being thought about and used by practitioners. This approach allows us to reason about how Blockchain may be useful in novel scenarios and to separate out normative beliefs from technical ones. 
 
-Our research has similarities with work by W{\"u}st and Gervais to evaluate the applicability of Blockchain to different problems~\cite{Wust17}, many of which overlap with the use cases we identified in our survey. However, their approach is based on applying their technical expertise, as opposed to our approach which during the survey phase seeks to minimize researcher bias to ascertain how non-experts understand the technology.
+Different aspects of the Blockchain landscape have been systemized in past work, however our approach provides a unique and complimentary perspective. An early comprehensive work is Bonneau \etal's cryptocurrency systemization of knowledge~\cite{BMC+15}, which advocates for research on Bitcoin, merges disparate non-academic sources of information, and evaluates extensions that begin to tread beyond currency. We share a common approach of bringing non-academic work into an academic light, however we take the broader focus of blockchain applications beyond cryptocurrencies as our starting point, we take greater effort at applying a thorough methodology for the evaluation of non-academic work, and we draw from a different body of knowledge (\ie from industry practitioners instead of the developer community).
 
-Narayanan and Clark separate out the key technical ideas expressed in the design of Bitcoin and survey the academic lineage of each, repudiating the common belief that Bitcoin was a radical departure from existing research~\cite{Narayanan17}. The authors discuss some aspects of how Bitcoin and Blockchain are understood by the general public, in particular identifying some key misconceptions that exist, but unlike in our work this is not their primary focus. Further, their survey covers academic literature while our goal of understanding how Blockchain is used and thought about by its users was best achieved by surveying analysis by industry and practitioners.
+More recently, W{\"u}st and Gervais develop a flow chart to answer the question: ``do you need a Blockchain''~\cite{Wust17}, and they evaluate several use-cases (that overlap with the ones we extract) with it. The authors use an approach based on domain knowledge and technical expertise; we purposely seek to minimize our own researcher bias to ascertain how non-experts understand the technology. Their flow chart is compared favorably to 30 similar charts appearing in industry whitepapers (that overlap with our dataset) and blog posts studied by Koens and Poll~\cite{}. This minimizes the novelty of the flowchart we develop in Figure~\ref{fig:blockchainFlowchart}, but it is a minor contribution of this work. 
 
-A paper by Conti et al. focuses on security and privacy issues in Bitcoin~\cite{Conti17}. The authors survey and tabulate known attacks against Bitcoin as well as countermeasures and upgrade proposals that could improve privacy and anonymity. In a similar vein, Henry et al. submit that current blockchain designs offer inadequate privacy protections and propose research directions to address the problem~\cite{Henry18}. Our work complements this research; in particular, our finding that industry analysts overstate the inherent privacy of Blockchain underscores its importance. 
+Narayanan and Clark describe the `academic pedigree' of Bitcoin's core technical innovations, repudiating the common belief that Bitcoin was a radical departure from existing research~\cite{Narayanan17}. The authors touch lighty on the public understanding of blockchain, highlighting some key misconceptions, however our work looks comprehensively at this. 
 
-Finally, there are several papers which analyze specific technical components of Blockchain in great depth. Gervais et al. provide a framework for analyzing the security and performance of different proof-of-work (PoW) Blockchain configurations, including Bitcoin and other cryptocurrencies~\cite{Gervais16}. Croman et al. similarly consider performance issues that appear when Blockchain is deployed at scale and suggest research directions~\cite{Croman16}. Bano et al. systematize different protocols for consensus and provide an evaluation framework to compare and contrast them~\cite{Bano17}. %This paper serves an important purpose by connecting decades of "classical" research on consensus protocols to modern systems developed with Blockchain in mind.
-Our approach differs from these three in both scope and perspective, as we provide a broader but less deep analysis of Blockchain's technical features and limitations and primarily clarify not how Blockchain systems works technically but how analysts and users perceive them to work.
+% look at this question.  this is not their primary focus. Further, their survey covers academic literature while our goal of understanding how Blockchain is used and thought about by its users was best achieved by surveying analysis by industry and practitioners.
+
+Several surveys deal with specific technical topics including consensus and scalability~\cite{Gervais16,Croman16,Bano17,garay2018consensus}, security vulnerabilities~\cite{Conti17}, and privacy issues~\cite{Henry18}. Our work has the broader focus of situating blockchain's general capabilities in potential industry use-cases. 
+
+
+
+% . The authors survey and tabulate known attacks against Bitcoin as well as countermeasures and upgrade proposals that could improve privacy and anonymity. In a similar vein, Henry et al. submit that current blockchain designs offer inadequate privacy protections and propose research directions to address the problem. Our work complements this research; in particular, our finding that industry analysts overstate the inherent privacy of Blockchain underscores its importance. 
+
+%Finally, there are several papers which analyze specific technical components of Blockchain in great depth. Gervais et al. provide a framework for analyzing the security and performance of different proof-of-work (PoW) Blockchain configurations, including Bitcoin and other cryptocurrencies~\cite{Gervais16}. Croman et al. similarly consider performance issues that appear when Blockchain is deployed at scale and suggest research directions~\cite{Croman16}. Bano et al. systematize different protocols for consensus and provide an evaluation framework to compare and contrast them~\cite{Bano17}. %This paper serves an important purpose by connecting decades of "classical" research on consensus protocols to modern systems developed with Blockchain in mind.
+%Our approach differs from these three in both scope and perspective, as we provide a broader but less deep analysis of Blockchain's technical features and limitations and primarily clarify not how Blockchain systems works technically but how analysts and users perceive them to work.
