--- a/paper/sections/discussion.tex
+++ b/paper/sections/discussion.tex
@@ -1,3 +1,5 @@
+% !TEX root = ../main.tex
+
 \section{Discussion}
 In this section we discuss the remaining results from our grounded theory work.
 
@@ -13,7 +15,7 @@ In this section we discuss the remaining results from our grounded theory work.
 	\label{fig:normative-properties}
 \end{figure}
 
-Within the literature we analyzed, there were a set of properties that were not technical properties directly provided by Blockchain technology, but rather expressed desired properties for systems built using Blockchain technology (i.e., normative properties).
+Within the literature we analyzed, there were a set of properties that were not technical properties directly provided by Blockchain technology, but rather expressed desired properties for systems built using Blockchain technology (\ie normative properties).
 These properties are shown in Figure~\ref{fig:normative-properties}.
 
 The majority of the normative properties focused around the notion of using Blockchain technology to allow for public participation.
