--- a/paper/sections/related-works.tex
+++ b/paper/sections/related-works.tex
@@ -7,7 +7,7 @@ Different aspects of the Blockchain landscape have been systemized in past work,
 
 More recently, W{\"u}st and Gervais develop a flow chart to answer the question: ``do you need a Blockchain''~\cite{Wust17}, and they evaluate several use-cases (that overlap with the ones we extract) with it. The authors use an approach based on domain knowledge and technical expertise; we purposely seek to minimize our own researcher bias to ascertain how non-experts understand the technology. Their flow chart is compared favorably to 30 similar charts appearing in industry whitepapers (that overlap with our dataset) and blog posts studied by Koens and Poll~\cite{}. This minimizes the novelty of the flowchart we develop in Figure~\ref{fig:blockchainFlowchart}, but it is a minor contribution of this work. 
 
-Narayanan and Clark describe the `academic pedigree' of Bitcoin's core technical innovations, repudiating the common belief that Bitcoin was a radical departure from existing research~\cite{Narayanan17}. The authors touch lighty on the public understanding of blockchain, highlighting some key misconceptions, however our work looks comprehensively at this. 
+Narayanan and Clark describe the `academic pedigree' of Bitcoin's core technical innovations, repudiating the common belief that Bitcoin was a radical departure from existing research~\cite{Narayanan17}. The authors touch lightly on the public (mis)understanding of blockchain, highlighting some key misconceptions, however our work explores this thoroughly.
 
 % look at this question.  this is not their primary focus. Further, their survey covers academic literature while our goal of understanding how Blockchain is used and thought about by its users was best achieved by surveying analysis by industry and practitioners.
 
