--- a/paper/sections/use-cases.tex
+++ b/paper/sections/use-cases.tex
@@ -25,15 +25,15 @@ Within this section, we describe these use cases.
 \subsection{Asset Management Use Cases}
 
 \paragraph{Cryptocurrencies and electronic payments}
-It is well-known that Blockchain technology can be used to build cryptocurrencies, thus enabling electronic payments.
-Bitcoin is a working example of this, however Bitcoin has notable drawbacks that include limited throughput and privacy.
+It is well-known that Blockchain technology can be used to build cryptocurrencies. 
+It enables electronic transactions that are resilient even when large values are at stake.
+Bitcoin is a working example of this, however Bitcoin has notable drawbacks that include scalability, performance and privacy.
 There is ongoing research that demonstrates how Blockchain technology can be used to create payment systems that are low-latency, scalable, partially offline, confidential and/or anonymous.
 
 \paragraph{Token tracking and trading}
 Real world financial markets provide the ability for the exchange of valuable assets and tend to involve intermediaries like exchanges, brokers or dealers, clearing and settlement entities. 
-Blockchain-based assets---which either hold intrinsic value on it's own blockchain, or represent a claim on an external material or digital asset---can be transacted directly between participants or governed by smart contracts.
-Similar to payments, such transactions are resilient even when large values are at stake.
-Shared governance enables direct trading between users and requires less financial market infrastructure.  
+Blockchain-based assets---which either hold intrinsic value on it's own blockchain, or represent a claim on an external material or digital asset---can be transacted directly between participants and governed by smart contracts.
+Shared governance enables direct trading between users and requires less financial market infrastructure.
 
 \paragraph{Asset Tracking} 
 Blockchain technology can be used for tracking material assets that are globally distributed, valuable, and whose provenance is of interest, when resilience and audibility are important. This includes long-term valuable items like artwork and diamonds; certified goods like food and luxury items; dispersed items like fleets of vehicles; and short-term items like package being shipped over long distances, which will change hands many times in the process. While assets are already tracked through digital databases, a blockchain solves the problem of who should run the database for industries with multiple participants. It provides a common environment where no single firm has the elevated power and control of running a widely-used database. The main challenge is specifying how material assets are assigned a tracking token on the blockchain in a trustworthy manner. A second challenge is the level of transparency a blockchain would bring to proprietary, profitable business practices.
