Tweaking some wording.

--- a/paper/sections/methodology.tex
+++ b/paper/sections/methodology.tex
@@ -96,7 +96,7 @@ In total, this stage resulted in the creation of 641 codes.
 
 \subsubsection{Stage 2---Axial Coding}
 In the second stage, our research team used the constant comparative method to group codes into concepts.
-Specifically, we collapsed distinct codes referring to the same topic (e.g., one was an open code, the other in situ) into a single code, reducing the original set of 641 codes to a more manageable 68 codes.
+Specifically, we collapsed distinct codes referring to the same topic (e.g., one was an open code, the other in situ) into a single code, reducing the original set of 641 codes to a more manageable 68 concepts.
 As needed, we referred back to the original documents to ensure that our understanding of the code was fresh, and that we were assigning it to the appropriate concept.
 Also, at this stage we continued to avoid evaluating the validity of concepts, ensuring that the ideas of the reviewed documents were fully reflected in the codes.
 
