--- a/paper/sections/use-cases.tex
+++ b/paper/sections/use-cases.tex
@@ -37,13 +37,13 @@ Shared governance enables direct trading between users and requires less financi
 For tokens that represent something off-blockchain (\ie equity in a firm or a debt instrument), the issue of stapling must be addressed.
 Many different aspects of subject to government oversight in most jurisdictions, making this area encumbered by regulation.
 
-\paragraph{Asset Tracking} 
+\paragraph{Asset tracking} 
 Blockchain technology can be used for tracking material assets that are globally distributed, valuable, and whose provenance is of interest, when resilience and audibility are important. This includes long-term valuable items like artwork and diamonds; certified goods like food and luxury items; dispersed items like fleets of vehicles; and short-term items like package being shipped over long distances, which will change hands many times in the process. While assets are already tracked through digital databases, a blockchain solves the problem of who should run the database for industries with multiple participants. It provides a common environment where no single firm has the elevated power and control of running a widely-used database. The main challenge is specifying how material assets are assigned a tracking token on the blockchain in a trustworthy manner. A second challenge is the level of transparency a blockchain would bring to proprietary, profitable business practices.
 
-\paragraph{Supply Chain Management} % Jeremy: needs better name
+\paragraph{Supply chain management} % Jeremy: needs better name
 Many complex devices built today require parts that are built by multiple companies, assembled into a useful whole. For heavily regulated industries, like airlines, or for military/intelligence applications, it is important to establish the source of each part that has been used, as well as a maintenance history. The benefit of a blockchain, like asset tracking, is mainly a political one (not a technical one): it enables a common environment while side-stepping the question of which entity maintains the environment. It also shares the same binding challenge.
 
-\paragraph{Auctions/Markets}
+\paragraph{Auctions and markets}
 A Blockchain-based market can provide a coordination point for buyers and sellers to find each other, exchange assets, and provide price information to observers. 
 Auctions are a common mechanism for setting a fair price. 
 Decentralized markets and auction mechanisms must address the issue of non-confidential transactions and the resulting potential for front-running by participants in the blockchain network (in particular, miners).
@@ -67,7 +67,7 @@ As these reports are recorded, the system can automatically begin the claim proc
 Blockchain technology's auditability provides confidence to customers that their claims were handled appropriately.
 Additionally, having insurers collectively govern and operate this system could ensure that claims are properly settled when they involve multiple insurers.
 
-\paragraph{Regulation/sanctions}
+\paragraph{Regulation and sanctions}
 Much like the insurance use case, regulations can be written to a Blockchain and off-chain oracles can report on real-world violations of those regulations.
 After a violation is reported, a smart contract can automatically apply the penalty or sanction for breaking the regulation.
 As the system is auditable, penalized parties have a full history of what led to their punishment, providing means for them to appeal if there was a mistake.
@@ -97,7 +97,7 @@ This could also be a quicker and more performant way of establishing identity th
 \paragraph{Gambling}
 By examining the most active Bitcoin scripts and Ethereum decentralized applications, gambling is popular. Players can audit the game to ensure that execution is fair, and the system can operate its own cryptocurrency to handle the finances (including holding the money in escrow to prevent losing parties from aborting before paying). This use case is best suited to gambling games that do not require randomness, private state, or knowledge of off-blockchain events. For the subset of residual games,\footnote{The most active Ethereum game is called Fomo3D: users pay to reset a 30 second countdown timer and if it ever reaches zero, the last user to pay wins all the money collected.} blockchain is an ideal platform. For the other types of games, new layers of technology would have be added on a Blockchain. Data-feeds (called oracles) of either randomness or real world event outcomes requires additional trust and introduces finality risk, while confidential user state require additional cryptography.  
 
-\paragraph{IoT/Smart Properties}
+\paragraph{IoT and smart property}
 IoT devices occasionally have the need to collectively make decisions.
 In these cases, Blockchain technology can provide a technological platform for making these collective decisions in an auditable fashion.
 This auditability is especially important as IoT devices are notoriously untrustworthy due to insufficient security, and the ability to later audit and analyze their actions is invaluable.
